<resources>
    <string name="app_name">SQLiteTest</string>
    <string name="bemVindo">Ola, Benvindo ao App Mamāe</string>
    <string name="descricao">Papa o melhor controle e gerenciamento da sua saúde e do bebê ver nais…
</string>
    <string name="imagemprincipal">0</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="registarbebe">Registar Bebe</string>


</resources>