<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/txt_expressao"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:contentDescription="@string/todo"
        android:ellipsize="start"
        android:gravity="end"
        android:scaleType="center"
        android:singleLine="true"
        android:src="@drawable/iinial"
        android:text="@string/imagemprincipal"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:onClick="onClick"
            android:text="@string/login"
            app:cornerRadius="200dp" />

        <Button
            android:id="@+id/Criarconta_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:onClick="abrirActivity"
            android:text="@string/fazer_login"
            app:cornerRadius="200dp" />
    </LinearLayout>


</LinearLayout>